Using String.formatted